	  the ipset that could add the domain's ip to a list easily.
	  Needs libmnl, and --enable-ipset and config it, doc/README.ipset.md.
	- Fix to omit RRSIGs from addition to the ipset.
	- Fix to make unbound-control with ipset, remove unused variable,
	  use unsigned type because of comparison, and assign null instead
	  of compare with it.  Remade lex and yacc output.
	- make depend

17 June 2019: Wouter
	- Master contains version 1.9.3 in development.
	- Fix #39: In libunbound, leftover logfile is close()d unpredictably.
	- Fix for #24: Fix abort due to scan of auth zone masters using old
	  address from previous scan.

12 June 2019: Wouter
	- Fix another spoolbuf storage code point, in prefetch.
	- 1.9.2rc3 release candidate tag.  Which became the 1.9.2 release
	  on 17 June 2019.

11 June 2019: Wouter
	- Fix that fixes the Fix that spoolbuf is not used to store tcp
	  pipelined response between mesh send and callback end, this fixes
	  error cases that did not use the correct spoolbuf.
	- 1.9.2rc2 release candidate tag.

6 June 2019: Wouter
	- 1.9.2rc1 release candidate tag.

4 June 2019: Wouter
	- iana portlist updated.

29 May 2019: Wouter
	- Fix to guard _OPENBSD_SOURCE from redefinition.

28 May 2019: Wouter
	- Fix to define _OPENBSD_SOURCE to get reallocarray on NetBSD.
	- gitignore config.h.in~.

27 May 2019: Wouter
	- Fix double file close in tcp pipelined response code.

24 May 2019: Wouter
	- Fix that spoolbuf is not used to store tcp pipelined response
	  between mesh send and callback end.

20 May 2019: Wouter
	- Note that so-reuseport at extreme load is better turned off,
	  otherwise queries are not distributed evenly, on Linux 4.4.x.

16 May 2019: Wouter
	- Fix #31: swig 4.0 and python module.

13 May 2019: Wouter
	- Squelch log messages from tcp send about connection reset by peer.
	  They can be enabled with verbosity at higher values for diagnosing
	  network connectivity issues.
	- Attempt to fix malformed tcp response.

9 May 2019: Wouter