@@ -7,6 +7,7 @@
 	  use unsigned type because of comparison, and assign null instead
 	  of compare with it.  Remade lex and yacc output.
 	- make depend
+	- Added documentation to the ipset files (for doxygen output).
 
 17 June 2019: Wouter
 	- Master contains version 1.9.3 in development.
